# osatui

./: .gitignore  Cargo.toml  README.md  all_source_code.txt  config.toml  config.toml.example  flake.nix  pizdez.txt  theme.toml.example  theme.toml.noctalia.template
.github/workflows/: ci.yaml  crates.yaml  release.yml
nix/: home-manager.nix  nixos.nix  package.nix
src/: app.rs  lib.rs  main.rs
src/api/: cache.rs  client.rs  mod.rs
src/app/: events.rs  mod.rs  state.rs
src/cache/: manager.rs
src/config/: keymap.rs  main.rs  mod.rs  theme.rs
src/ui/: header.rs  mod.rs  schedule.rs  selector.rs  setup.rs
src/ui/components/: input.rs  list.rs
src/ui/screens/: mod.rs  normal.rs  selector.rs  setup.rs
src/utils/: date.rs  mod.rs
tests/: integration_tests.rs
