[package]
name = "osatui"
version = "0.1.1"
edition = "2024"
description = "Terminal UI client for educational schedule API with interactive college, campus and group selection"
authors = ["Vadim <vadim@storozhiloff.ru>"]
license = "MIT"
repository = "https://github.com/bircoder432/osatui"
readme = "README.md"
keywords = ["tui", "schedule", "education", "terminal", "api-client"]
categories = ["command-line-utilities", "api-bindings"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "config.toml.example",
    "theme.toml.example",
]

[[bin]]
name = "gen_config"
path = "src/bin/gen_config.rs"


[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["serde"] }
dirs = "6.0.0"
osars = { version = "0.1.0", features = ["full"] }
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
